--- a/app/views/item_shares/new.html.erb
+++ b/app/views/item_shares/new.html.erb
@@ -22,7 +22,7 @@
 	<div class="row">
 		<%  @users.each do |user| %>
 		<div class="col-sm-4 col-md-3 ">
-			<div class="card card-custom-width">
+			<div class="card card-custom-width box-shadow--3dp">
 
 				<%= image_tag user.avatar, class: 'card-img-top card-img-users-share center-block' %>
 				<div class="card-block">
