--- a/app/views/item_shares/new.html.erb
+++ b/app/views/item_shares/new.html.erb
@@ -9,15 +9,14 @@
 			<div class="input-group-addon"><i class="fa fa-search"></i></div>
 			<%= text_field_tag :search_users, params[:search_users], class: "form-control" %>
 			<div class="input-group-addon">
-				<%= hidden_field_tag :item_id, params[:item_id] %>
+				<%= hidden_field_tag :item_id, params[:item] %>
+				<% console %>
 				<%= submit_tag "Search", :name => nil %>
 			</div>
-
 		</div>
 	</div>
 </div>
 <% end %>
-
 <div class="card-columns">
 	<div class="row">
 		<%  @users.each do |user| %>
@@ -32,8 +31,7 @@
 					<%= link_to "Loan It", item_shares_path(:user_id => user.id, :item_id => @item_id), :method => :post, class: "btn btn-primary" %>
 				</div>	
 			</div>
-
 		</div>
-	<% end %>
+		<% end %>
 	</div>	
 </div>
