--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,3 +1,5 @@
+<!-- This page doesn't use the normal layout. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -13,71 +15,68 @@
 </head>
 <body class="home_page">
 	<div id="wrapper text-center">
-		<% if flash[:alert] %>
-		<div class="alert alert-danger text-center" role="alert"><span class="alert"><%= alert %></span></div>
-		<% elsif flash[:notice] %>
-		<div class="alert alert-info text-center" role="alert"><span class="notice"><%= notice %></span></div>
-		<% end %>
-		<div class="blur-bg">
-			<div class="container">
-			<div class="text-center">
-				<h1 class=" logo-text"><a href="/" class="main-logo-link">LOWNER</a></h1>
-				<nav class="nav navbar">
-					<ul class=" nav navbar nav-pills">
-						<li class="nav-link">
-							<% if user_signed_in? %>
-							<%= link_to "Your Profile", profile_path(current_user), class: 'menuButton' %>
-							<% else %>
-							<%= link_to 'Sign Up', new_user_registration_path, class: 'menuButton' %>
-							<% end %>
-						</li>
-						<li class="nav-link">
-							<a href="###" class="menuButton" id="learn-more-button">Learn More</a>
-						</li>
-						<li class="nav-link">
-							<% if user_signed_in? %>
-							<%= link_to('Logout', destroy_user_session_path, :method => :delete, class: "menuButton") %>        
-							<% else %>
-							<%= link_to 'Sign In', new_user_session_path, class: 'menuButton' %>
-							<% end %>
-						</li>
-					</ul>
-				</nav>
-			</div>
-				<div id="hidden-block" class="learn-more center-block" display="none">
-					<h3><strong>Track Your Stuff</strong></h3>
-					<p>
-						Have you ever had that friend or colleague that held on to your cat or fan too long?
-					</p>
-					<p>
-						Well, <span class="logo-text-small">Lowner</span> has been created help you and your friend's track your stuff.
-					</p>
-					<p>
-						<span class="logo-text-small">Lowner</span> allows you to <span class="action-items">create, share, delete and take back</span> your items.
-					</p>
-					<p>
-						Go ahead and <%= link_to 'create an account', new_user_registration_path %> to get started.
-					</p>
+		<%= render 'pages/rootflashes' %>
+			<div class="blur-bg">
+				<div class="container">
+					<div class="text-center">
+						<h1 class=" logo-text"><a href="/" class="main-logo-link">LOWNER</a></h1>
+						<nav class="nav navbar">
+							<ul class=" nav navbar nav-pills">
+								<li class="nav-link">
+									<% if user_signed_in? %>
+									<%= link_to "Your Profile", profile_path(current_user), class: 'menuButton' %>
+									<% else %>
+									<%= link_to 'Sign Up', new_user_registration_path, class: 'menuButton' %>
+									<% end %>
+								</li>
+								<li class="nav-link">
+									<a href="###" class="menuButton" id="learn-more-button">Learn More</a>
+								</li>
+								<li class="nav-link">
+									<% if user_signed_in? %>
+									<%= link_to('Logout', destroy_user_session_path, :method => :delete, class: "menuButton") %>        
+									<% else %>
+									<%= link_to 'Sign In', new_user_session_path, class: 'menuButton' %>
+									<% end %>
+								</li>
+							</ul>
+						</nav>
+					</div>
+
+					<div id="hidden-block" class="learn-more center-block" display="none">
+						<h3><strong>Track Your Stuff</strong></h3>
+						<p>
+							Have you ever had that friend or colleague that held on to your cat or fan too long?
+						</p>
+						<p>
+							Well, <span class="logo-text-small">Lowner</span> has been created help you and your friend's track your stuff.
+						</p>
+						<p>
+							<span class="logo-text-small">Lowner</span> allows you to <span class="action-items">create, share, delete and take back</span> your items.
+						</p>
+						<p>
+							Go ahead and <%= link_to 'create an account', new_user_registration_path %> to get started.
+						</p>
+					</div>
 				</div>
 			</div>
-		</div>
-		<div class="clearfix"></div>
-		<footer class="footer">
-			<div class="row">
-				<nav class="navbar navbar-fixed-bottom navbar-dark bg-inverse col-sm-2 navbar-color" id="navbar-change">
-					<button class="navbar-toggler center-block" id="navbar-expander" type="button" data-toggle="collapse" data-target="#stats-of-lowner">
-						<i class="fa fa-bars fa-inverse"></i> Stats
-					</button>
-					<div class="collapse" id="stats-of-lowner">
-						<ul class="nav nav-inline stats-list">
-							<li class="nav-item nav-item-spread">Total Users: <%= User.all.count %></li>
-							<li class="nav-item nav-item-spread">Total Items: <%= Item.all.count %></li>
-							<li class="nav-item">Total Lowns: <%= ItemShare.all.count %></li>
-						</ul>
-					</div>
-				</nav>
-			</div>
-		</footer>
+			<div class="clearfix"></div>
+			<footer class="footer">
+				<div class="row">
+					<nav class="navbar navbar-fixed-bottom navbar-dark bg-inverse col-sm-2 navbar-color" id="navbar-change">
+						<button class="navbar-toggler center-block" id="navbar-expander" type="button" data-toggle="collapse" data-target="#stats-of-lowner">
+							<i class="fa fa-bars fa-inverse"></i> Stats
+						</button>
+						<div class="collapse" id="stats-of-lowner">
+							<ul class="nav nav-inline stats-list">
+								<li class="nav-item nav-item-spread">Total Users: <%= User.all.count %></li>
+								<li class="nav-item nav-item-spread">Total Items: <%= Item.all.count %></li>
+								<li class="nav-item">Total Lowns: <%= ItemShare.all.count %></li>
+							</ul>
+						</div>
+					</nav>
+				</div>
+			</footer>
 	</div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
 	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
