--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,24 +1,27 @@
 <h2>Edit <%= current_user.username %>'s Profile</h2>
+<div class="profile-explanation">
+  <p>This is where you can update your profile. Go ahead and add your cellphone, name and an updated avatar if you haven't yet.</p>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put, multipart: true }) do |f| %>
-  <%= devise_error_messages! %>
-  <div  class= "pull-right">
-<p>Current avatar:</p> <%= image_tag current_user.avatar.url(:medium), class: "img-responsive" %>
+<%= devise_error_messages! %>
+<div  class= "pull-right">
+  <p>Current avatar:</p> <%= image_tag current_user.avatar.url(:medium), class: "img-responsive" %>
 </div>
 <div id="form-group">
   <div class="field">
     <%= f.label :email %><br />
     <%= f.email_field :email, autofocus: true %>
   </div>
-    <div class="field">
+  <div class="field">
     <%= f.label :username %><br />
     <%= f.text_field :username %>
   </div>
-    <div class="field">
+  <div class="field">
     <%= f.label :first_name %><br />
     <%= f.text_field :first_name %>
   </div>
-    <div class="field">
+  <div class="field">
     <%= f.label :last_name %><br />
     <%= f.text_field :last_name %>
   </div>
@@ -31,14 +34,14 @@
     <%= f.text_area :bio %>
   </div>
   <div class="field">
-  <%= f.label 'Add your avatar' %>
-  <%= f.file_field :avatar %>
+    <%= f.label 'Add your avatar' %>
+    <%= f.file_field :avatar %>
   </div>
 
   <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+  <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
   <% end %>
-<% if current_user.provider != "facebook"%>
+  <% if current_user.provider != "facebook"%>
   <div class="field">
     <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
     <%= f.password_field :password, autocomplete: "off" %>
@@ -53,19 +56,19 @@
     <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
     <%= f.password_field :current_password, autocomplete: "off" %>
   </div>
-<% end %>
-<br />
+  <% end %>
+  <br />
   <div class="actions">
     <%= f.submit "Update" %>
   </div>
-<% end %>
-<%= link_to "Back", :back, class: "back-button" %>
+  <% end %>
+  <%= link_to "Back", :back, class: "back-button" %>
 </div>
 <hr>
-<div class="pull-right">
-<h3>Delete My Account</h3>
+<div class="pull-right delete-area">
+  <h3>Delete My Account</h3>
 
-<p>Tired of sharing with your friends? <%= button_to "Recycle My Account", registration_path(resource_name), data: { confirm: "Are you sure you won't be needing any of your stuff back?" }, method: :delete %></p>
+  <p>Tired of sharing with your friends? <%= button_to "Recycle My Account", registration_path(resource_name), data: { confirm: "Are you sure you won't be needing any of your stuff back?" }, method: :delete %></p>
 </div>
 
 
