--- a/app/views/devise/shared/_registration_items.html.erb
+++ b/app/views/devise/shared/_registration_items.html.erb
@@ -4,6 +4,6 @@
   </li>
 <% else %>
   <li class= "nav-item">
-  <%= link_to(' Register', new_user_registration_path, class: "nav-link top-bar-nav-link fa fa-arrow-circle-right")  %>
+  <%= link_to(' Register', new_user_registration_path, class: "nav-link top-bar-nav-link")  %>
   </li>
 <% end %>
