--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,7 +46,7 @@
       <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
         <ul class="nav navbar-nav  pull-right nav-tabs">
           <%= render 'devise/shared/login_items' %>
-          <li class="nav-item top-bar-nav-link"><%= link_to "", '###', class: "nav-link fa fa-info-circle fa-lg shared-show-hide", id: "show-hide-about" %> </li>
+          <li class="nav-item top-bar-nav-link"><%= link_to "", '###', class: "nav-link fa fa-info-circle shared-show-hide", id: "show-hide-about" %> </li>
         </ul>
       </nav>
     </footer>
